@@ -4,19 +4,15 @@ plugins {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(25))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
 tasks.withType<JavaCompile>().configureEach {
-    options.release.set(25)
+    options.release.set(21)
     options.encoding = "UTF-8"
-    options.compilerArgs.add("--enable-preview")
 }
 
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs("--enable-preview")
-}
 
 tasks.test {
     useJUnitPlatform()
